--- a/src/blocks/menu-popup/menu-popup.scss
+++ b/src/blocks/menu-popup/menu-popup.scss
@@ -1,6 +1,6 @@
 .menu-popup {
   display: none;
-  z-index: 9;
+  z-index: $z-index-modal;
   position: fixed;
   bottom: 0;
   left: 0;
