--- a/src/blocks/search-popup/search-popup.scss
+++ b/src/blocks/search-popup/search-popup.scss
@@ -1,7 +1,7 @@
 .search-popup {
   position: fixed;
   display: none;
-  z-index: 9;
+  z-index: $z-index-modal;
   bottom: 0;
   left: 0;
   width: 100%;
