--- a/src/blocks/section/section.scss
+++ b/src/blocks/section/section.scss
@@ -4,7 +4,7 @@
   &--first {
     position: relative;
     margin-top: -110px;
-    z-index: 2;
+    z-index: $z-index-top;
     @include media-laptop {
       margin-top: -75px;
     }
