--- a/src/blocks/tab-bar/tab-bar.scss
+++ b/src/blocks/tab-bar/tab-bar.scss
@@ -1,7 +1,7 @@
 .tab-bar {
   position: fixed;
   bottom: 0;
-  z-index: 10;
+  z-index: $z-index-menu;
   width: 100%;
   padding: 15px 50px;
   background: $base-white;
